--- a/src/styles/agency.module.scss
+++ b/src/styles/agency.module.scss
@@ -7,12 +7,15 @@
     width: 100vw;
 }
 
+
+
 .oagenciji{
    height: auto;
     min-height: 60vh;
-    margin-top: 5vh;
     display: flex;
     .contentBlock{
+        margin-top: 5vh;
+        margin-bottom: 5vh;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -33,6 +36,10 @@
             }
         }
     }
+}
+
+.agencySection{
+    margin-top: 5vh;
 }
 
 @media only screen and (max-width: 960px){
