--- a/src/styles/agency.module.scss
+++ b/src/styles/agency.module.scss
@@ -42,6 +42,16 @@
     margin-top: 5vh;
 }
 
+@media only screen and (max-height: 800px){
+    .oagenciji{
+        .contentBlock{
+            .agencyImage{
+                width: 40%;
+                height: 40%;
+            }
+        }}
+}
+
 @media only screen and (max-width: 960px){
     .oagenciji{
         .contentBlock{
