--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -29,7 +29,7 @@
                 input{
                     border: 0px;
                     width: 30vw;
-                    height: 5vh;
+                    height: 50px;
                     background: #f8f7f7;
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     border-radius: 10px;
@@ -56,7 +56,7 @@
     .footerContent {
         display: flex;
         justify-content: space-around;
-        padding-top: 8vh;
+        padding-top: 10vh;
     }
 }
 
