--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -14,6 +14,9 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      p{
+        max-width: 70vh;
+      }
       .contentBlock{
         height: 25vh;
         display: flex;
@@ -27,6 +30,10 @@
           
         }
       }
+      // .seorocket{
+      //   width: 1800px;
+      //   height: 100%;
+      // }
     }
     .wave{
       position: absolute;
@@ -41,9 +48,29 @@
   
   
   
+  @media only screen and (max-height: 1300px){
+    .heroSection{
+      .main{
+        .seorocket{
+          height: 500px;
+          width: 380px;
+        }
+      }
+    }
+  }
   
-  
-  @media only screen and (max-width: 1200px){
+  @media only screen and (max-height: 900px){
+    .heroSection{
+      .main{
+        .seorocket{
+          height: 400px;
+          width: 280px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 1040px){
     .heroSection{
         justify-content: space-between;
       .main{
