--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -7,6 +7,7 @@
 @import './how.module.scss';
 @import './contact.module.scss';
 @import './cookie.module.scss';
+@import './modal.module.scss';
 
 
 @font-face {
