--- a/src/styles/aboutSeo.module.scss
+++ b/src/styles/aboutSeo.module.scss
@@ -3,7 +3,6 @@
     font-family: "Poppins";
     width: 45%;
     min-height: 60vh;
-    height: auto;
     opacity: 0.7;
     border-radius: 26.7365px;
     box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
@@ -69,6 +68,29 @@
     }
 }
 
+@media only screen and (max-height: 900px){
+    .AboutSEO{
+        .contentBlock2{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-left: 10vw;
+            margin-right: 10vw;
+    
+            .box{
+                .list{
+                    width: 80%;
+                    height: 80%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+    
+                }
+            }     
+        }
+    }
+}
+
 
 @media only screen and (max-width: 960px){
     .AboutSEO{
@@ -77,7 +99,7 @@
             align-items: center;
             .box{
                 margin-bottom: 5vh;
-                width: 50%;
+                width: 90%;
                 padding: 0;
                 height: auto;
             }
