--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 
 .heroSection{
-  padding-top: 0;
+    padding-top: 0;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -52,23 +52,26 @@
     .heroSection{
       .main{
         .seorocket{
-          height: 500px;
+          height: 400px;
+          width: 380px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-height: 690px){
+    .heroSection{
+      justify-content: space-between;
+      .main{
+        .seorocket{
+          height: 100px;
           width: 380px;
         }
       }
     }
   }
   
-  @media only screen and (max-height: 900px){
-    .heroSection{
-      .main{
-        .seorocket{
-          height: 400px;
-          width: 280px;
-        }
-      }
-    }
-  }
+
 
   @media only screen and (max-width: 1040px){
     .heroSection{
