--- a/src/styles/cookie.module.scss
+++ b/src/styles/cookie.module.scss
@@ -1,10 +1,10 @@
 .cookie{
     overflow: hidden;
-    height: 20vh;
+    height: 20%;
     width: 100vw;
     position: fixed;
     z-index: 1;
-    top: 80vh;
+    top: 80%;
     background-color: #91ed968d;
     display: flex;
     justify-content: center;
