--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -6,10 +6,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     overflow: hidden;
     .main{
-        width: 100%;
+      width: 100%;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -41,7 +41,7 @@
       height: 15vh;
       left: 0;
       right: 0;
-      top: 85%;
+      top: 88%;
       z-index: -1000;
     }
   }
@@ -52,24 +52,24 @@
     .heroSection{
       .main{
         .seorocket{
-          height: 400px;
-          width: 380px;
+          height: 450px;
+          width: 320px;
         }
       }
     }
   }
 
-  @media only screen and (max-height: 690px){
-    .heroSection{
-      justify-content: space-between;
-      .main{
-        .seorocket{
-          height: 100px;
-          width: 380px;
-        }
-      }
-    }
-  }
+  // @media only screen and (max-height: 690px){
+  //   .heroSection{
+  //     justify-content: space-between;
+  //     .main{
+  //       .seorocket{
+  //         height: 100px;
+  //         width: 380px;
+  //       }
+  //     }
+  //   }
+  // }
   
 
 
@@ -101,7 +101,7 @@
       .main{
         height: 100%;
         margin-top: 3vh;
-        justify-content: space-between;
+        justify-content: center;
         .contentBlock{
           height: 40vh;
           margin-top: 2vh;
