--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -97,7 +97,8 @@
               }
           }
           .navBtn{
-            width: 185px;
+            max-width: 185px;
+            font-size: 15px
         }
     }
 };
@@ -128,9 +129,14 @@
     }
 
     .navBtn{
-        width: 200px;
+        max-width: 200px;
     }
 
+    .cookyBtn{
+        height: auto;
+        min-width: 160px;
+        font-size: 12px;
+    }
     .btn{
         color: #fff;
         cursor: pointer;
@@ -162,16 +168,4 @@
             }
 
     }
-    
-    // .btn:hover {
-    //     background-color: #3f35b095;
-    //     box-shadow: 0 0 20px #6fc5ff50;
-    //   }
-      
-    //   .btn:active {
-    //     background-color: #3d94cf;
-    //     transition: all 0.25s;
-    //     -webkit-transition: all 0.25s;
-    //     box-shadow: none;
-    //   }
 }
