--- a/src/styles/services.module.scss
+++ b/src/styles/services.module.scss
@@ -42,6 +42,11 @@
             background: #91ED95;
             border-radius: 17.9221px;
             box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+            
+            .img{
+                width: 80%;
+                height: 65%;
+            }
         }
 
         .service:disabled {
