--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,6 +16,8 @@
             padding-bottom: 0vh;
         }
         .subtitle2{
+            padding-left: 5px;
+            padding-right: 5px;
             font-size: 32px;
             line-height: 32px;
             padding-top: 6vh;
@@ -129,7 +131,7 @@
     }
 
     .navBtn{
-        max-width: 200px;
+        max-width: 160px;
     }
 
     .cookyBtn{
