--- a/src/styles/aboutSeo.module.scss
+++ b/src/styles/aboutSeo.module.scss
@@ -1,11 +1,6 @@
 @import 'mixins';
 @mixin box {
     font-family: "Poppins";
-    width: 45%;
-    min-height: 60vh;
-    opacity: 0.7;
-    border-radius: 26.7365px;
-    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,14 +8,16 @@
 }
 
 .AboutSEO{
-    display: flex;
     height: auto;
+    display: flex;
     flex-direction: column;
     overflow: hidden;
+    // align-items: center;
     .contentBlock2{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         margin-left: 10vw;
         margin-right: 10vw;
 
@@ -28,31 +25,13 @@
             @include Hover();
             @include box;
             .list{
-                width: 80%;
-                height: 80%;
+                // width: 80%;
+                // height: 80%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
 
             }
-        }
-        .box:disabled {
-            pointer-events: none;
-           }
-        .box:hover {
-            opacity: 0.9;
-            box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-            transform: translateY(-2px);
-        }
-        .box:active {
-            box-shadow: none;
-            transform: translateY(0);
-        }
-        .corect{
-            background-color: #91ED95;
-        }
-        .incorect{
-            background-color: #D75073;
         }
         .list{
             .listElement{
@@ -60,6 +39,8 @@
                 flex-direction: row;
                 align-items: center;
                 height: 20%;
+                padding-bottom: 20px;
+                padding-top: 20px;
                 p{
                     margin-left: 10px;
                 }
@@ -106,6 +87,8 @@
             .list{
                 width: 90%;
                 .listElement{
+                    padding-bottom: 20px;
+                    padding-top: 20px;
                     p{
                         font-size: 15px;
                         line-height: 15px;
