--- a/src/styles/agency.module.scss
+++ b/src/styles/agency.module.scss
@@ -9,6 +9,7 @@
 }
 
 
+
 .oagenciji{
    height: auto;
     min-height: 60vh;
@@ -33,6 +34,10 @@
                 a{
                     color: #fff
                 }
+            }
+            .buttonLinks{
+                display: flex;
+                flex-direction: row;
             }
         }
     }
